# rust-gpu-vulkano-example

./: .gitignore  Cargo.toml  README.md  rust-toolchain
example/: Cargo.toml  build.rs
example-shader/: Cargo.toml
example-shader/src/: image_shader.rs  lib.rs
example/src/: main.rs  shaders.rs
