[package]
name = "example"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["use-installed-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

# use this to switch back to glsl shaders
use-glsl-shader = []

[dependencies]
# once vulkano 0.34.X releases this git declaration may be replaced
# https://github.com/vulkano-rs/vulkano/pull/2180
vulkano = { git = "https://github.com/vulkano-rs/vulkano", rev = "62ff8b45a51489b64db4679148b169df18bc565f" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano", rev = "62ff8b45a51489b64db4679148b169df18bc565f" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano", rev = "62ff8b45a51489b64db4679148b169df18bc565f" }

winit = "0.28"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
png = "0.17"

[build-dependencies]
spirv-builder = { version = "0.9", default-features = false }
